--- a/facebook-login/package.json
+++ b/facebook-login/package.json
@@ -5,6 +5,13 @@
   "engines": {
     "node": ">= 0.10.0"
   },
+  "scripts": {
+    "setup": "npm install; bower install",
+    "start": "./node_modules/grunt/lib/grunt.js serve",
+    "export": "./node_modules/grunt/lib/grunt.js export",
+    "jscheck": "./node_modules/grunt/lib/grunt.js jshint",
+    "clean": "./node_modules/grunt/lib/grunt.js clean"
+  },
   "devDependencies": {
     "babel-preset-es2015": "^6.6.0",
     "grunt": "^0.4.5",
